// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScreenReaderOnly Paragraph element should match the snapshot 1`] = `
.c0 {
  position: absolute;
  left: -10000px;
  top: auto;
  width: 1px;
  height: 1px;
  overflow: hidden;
}

<div>
  <div
    class="c0"
  >
    <p>
      Lorem ipsum
    </p>
  </div>
</div>
`;

exports[`ScreenReaderOnly Text should match the snapshot 1`] = `
.c0 {
  position: absolute;
  left: -10000px;
  top: auto;
  width: 1px;
  height: 1px;
  overflow: hidden;
}

<div>
  <div
    class="c0"
  >
    Lorem ipsum
  </div>
</div>
`;
